--- a/homeworks/07-mars-viewer/src/components/SolPhotos.module.css
+++ b/homeworks/07-mars-viewer/src/components/SolPhotos.module.css
@@ -1,14 +1,3 @@
-.container {
-  margin: 0 auto;
-  max-width: 2000px;
-  padding: 40px;
-}
-
-.title {
-  font-size: 4.4rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
 .cardList {
   width: 100%;
   display: flex;
@@ -18,6 +7,11 @@
 .cardList::after {
   content: "";
   flex-grow: 9999;
+}
+
+.text {
+  font-size: 2.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 @media only screen and (max-width: 600px) {
