07: Add favourite markers to photo, new actions, favIcon, refactor how selected sol

--- a/homeworks/07-mars-viewer/src/components/PhotoCard.module.css
+++ b/homeworks/07-mars-viewer/src/components/PhotoCard.module.css
@@ -9,3 +9,12 @@
   width: 100%;
   vertical-align: bottom;
 }
+
+.favIcon {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  cursor: pointer;
+}
